tyfocg/deployment/stg/app-mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-mysql
  namespace: tyfocg-stg
  labels:
    app: app-mysql
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-mysql
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: app-mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: app-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: app-mysql-pv-claim
