tyfocg/deployment/stg/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-nginx
  labels:
    app: app-nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app-nginx
        tier: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 8080
          name: nginx
        volumeMounts:
          - name: nginx-config-persistent-storage
            mountPath: /etc/nginx
          - name: nginx-www-persistent-storage
            mountPath: /usr/share/nginx
      volumes:
        - name: nginx-config-persistent-storage
          persistentVolumeClaim:
             claimName: nginx-config-pv-claim
        - name: nginx-www-persistent-storage
          persistentVolumeClaim:
             claimName: nginx-www-pv-claim
