tyfocg/deployment/stg/php-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-php
  namespace: tyfocg-stg
  labels:
    app: app-php
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app-php
        tier: php
    spec:
      containers:
      #- image: php:5.6-fpm
      - image: bitnami/php-fpm:5.6
        #command: [ "sh","/bitnami/run" ]
        name: php
        ports:
        - containerPort: 9000
          name: php
        volumeMounts:
          - name: php-config-persistent-storage
            mountPath: /bitnami
          - name: php-www-persistent-storage
            mountPath: /usr/share/nginx
          - name: localtime-config-volume
            mountPath: /etc/localtime
      volumes:
        - name: php-config-persistent-storage
          persistentVolumeClaim:
             claimName: php-config-pv-claim
        - name: php-www-persistent-storage
          persistentVolumeClaim:
             claimName: php-www-pv-claim
        - name: localtime-config-volume
          hostPath:
             path: /etc/localtime
