tyfocg/deployment/stg/platform-api-developer-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platform-api-developer
  namespace: tyfocg-stg
  labels:
    app: platform-api-developer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: platform-api-developer
        tier: api-developer
    spec:
      containers:
      - image: pupudaye/centos-java
        command: [ "sh" ,"/data/api-developer/run"]
        name: platform-api-developer
        ports:
        - containerPort: 8084
          name: api-developer
        volumeMounts:
            - name: platform-api-developer-persistent-storage
              mountPath: /data
            - name: localtime-config-volume
              mountPath: /etc/localtime
      volumes:
        - name: platform-api-developer-persistent-storage
          persistentVolumeClaim:
             claimName: platform-api-developer-pv-claim
        - name: localtime-config-volume
          hostPath:
             path: /etc/localtime
