tyfocg/deployment/stg/platform-api-game-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platform-api-game
  namespace: tyfocg-stg
  labels:
    app: platform-api-game
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: platform-api-game
        tier: api-game
    spec:
      containers:
      - image: pupudaye/centos-java
        #command: [ "java","-jar","/data/api-game/api-game-1.0-SNAPSHOT.jar", "--spring.config.location=/data/api-game/application.yml" ]
        command: [ "sh" ,"/data/api-game/run"]
        name: platform-api-game
        ports:
        - containerPort: 8084
          name: api-game
        volumeMounts:
            - name: platform-api-game-persistent-storage
              mountPath: /data
            - name: localtime-config-volume
              mountPath: /etc/localtime
      volumes:
        - name: platform-api-game-persistent-storage
          persistentVolumeClaim:
             claimName: platform-api-game-pv-claim
        - name: localtime-config-volume
          hostPath:
             path: /etc/localtime
