tyfocg/deployment/stg/platform-api-pay-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platform-api-pay
  namespace: tyfocg-stg
  labels:
    app: platform-api-pay
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: platform-api-pay
        tier: api-pay
    spec:
      containers:
      - image: pupudaye/centos-java
        #command: [ "java","-jar","/data/api-pay/api-pay-1.0-SNAPSHOT.jar", "--spring.config.location=/data/api-pay/application.yml" ]
        command: [ "sh","/data/api-pay/run" ]
        name: platform-api-pay
        ports:
        - containerPort: 8083
          name: api-pay
        volumeMounts:
          - name: platform-api-pay-persistent-storage
            mountPath: /data
          - name: localtime-config-volume
            mountPath: /etc/localtime
      volumes:
        - name: platform-api-pay-persistent-storage
          persistentVolumeClaim:
             claimName: platform-api-pay-pv-claim
        - name: localtime-config-volume
          hostPath:
             path: /etc/localtime
