tyfocg/deployment/stg/platform-api-user-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platform-api-user
  namespace: tyfocg-stg
  labels:
    app: platform-api-user
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: platform-api-user
        tier: api-user
    spec:
      containers:
      - image: pupudaye/centos-java
        #command: [ "java","-jar","/data/api-user/api-user-1.0-SNAPSHOT.jar", "--spring.config.location=/data/api-user/application.yml" ]
        command: [ "sh","/data/api-user/run" ]
        name: platform-api-user
        ports:
        - containerPort: 8082
          name: api-user
        volumeMounts:
            - name: platform-api-user-persistent-storage
              mountPath: /data
            - name: localtime-config-volume
              mountPath: /etc/localtime
      volumes:
        - name: platform-api-user-persistent-storage
          persistentVolumeClaim:
             claimName: platform-api-user-pv-claim
        - name: localtime-config-volume
          hostPath:
             path: /etc/localtime
