tyfocg/deployment/stg/platform-mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platform-mysql
  namespace: tyfocg-stg
  labels:
    app: platform-mysql
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: platform-mysql
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7.18
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: platform-mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: platform-mysql-config-persistent-storage
          mountPath: /etc/mysql
        - name: platform-backup-data-persistent-storage
          mountPath: /backup-data
        - name: localtime-config-volume
          mountPath: /etc/localtime
      volumes:
      - name: platform-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: platform-mysql-pv-claim
      - name: platform-mysql-config-persistent-storage
        persistentVolumeClaim:
          claimName: platform-mysql-config-pv-claim
      - name: platform-backup-data-persistent-storage
        persistentVolumeClaim:
          claimName: platform-backup-data-pv-claim
      - name: localtime-config-volume
        hostPath:
          path: /etc/localtime
