tyfocg/deployment/stg/platform-service-center-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platform-service-center
  namespace: tyfocg-stg
  labels:
    app: platform-service-center
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: platform-service-center
        tier: service-center
    spec:
      containers:
      - image: pupudaye/centos-java
        command: [ "java","-jar","/data/service-center/service-center-1.0-SNAPSHOT.jar", "--spring.config.location=/data/service-center/application.yml" ]
        name: platform-service-center
        ports:
        - containerPort: 8081
          name: service-center
        volumeMounts:
            - name: platform-service-center-persistent-storage
              mountPath: /data
      volumes:
        - name: platform-service-center-persistent-storage
          persistentVolumeClaim:
             claimName: platform-service-center-pv-claim
