tyfocg/deployment/stg/platform-service-file-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platform-service-file
  namespace: tyfocg-stg
  labels:
    app: platform-service-file
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: platform-service-file
        tier: service-file
    spec:
      containers:
      - image: pupudaye/centos-java
        #command: [ "java","-jar","/data/service-file/service-file-1.0-SNAPSHOT.jar", "--spring.config.location=/data/service-file/application.yml" ]
        command: [ "sh","/data/service-file/run" ]
        name: platform-service-file
        ports:
        - containerPort: 8094
          name: service-file
        volumeMounts:
            - name: platform-service-file-persistent-storage
              mountPath: /data
            - name: platform-service-file-data-persistent-storage
              mountPath: /app/imgs
            - name: localtime-config-volume
              mountPath: /etc/localtime
      volumes:
        - name: platform-service-file-persistent-storage
          persistentVolumeClaim:
             claimName: platform-service-file-pv-claim
        - name: platform-service-file-data-persistent-storage
          persistentVolumeClaim:
             claimName: platform-service-file-data-pv-claim
        - name: localtime-config-volume
          hostPath:
             path: /etc/localtime
