tyfocg/deployment/stg/platform-service-message-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platform-service-message
  namespace: tyfocg-stg
  labels:
    app: platform-service-message
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: platform-service-message
        tier: service-message
    spec:
      containers:
      - image: pupudaye/centos-java
        #command: [ "java","-jar","/data/service-message/service-message-1.0-SNAPSHOT.jar","--spring.config.location=/data/service-message/application.yml" ]
        command: [ "sh","/data/service-message/run" ]
        name: platform-service-message
        ports:
        - containerPort: 8093
          name: service-message
        volumeMounts:
            - name: platform-service-message-persistent-storage
              mountPath: /data
            - name: localtime-config-volume
              mountPath: /etc/localtime
      volumes:
        - name: platform-service-message-persistent-storage
          persistentVolumeClaim:
             claimName: platform-service-message-pv-claim
        - name: localtime-config-volume
          hostPath:
             path: /etc/localtime
