tyfocg/deployment/stg/redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platform-redis
  namespace: tyfocg-stg
  labels:
    app: platform-redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: platform-redis
        tier: redis
    spec:
      containers:
      - image: redis:3.2.9
        command: [ "redis-server" ]
        args: [ "redis.conf" ]
        name: redis
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
            - name: redis-persistent-storage
              mountPath: /data
      volumes:
        - name: redis-persistent-storage
          persistentVolumeClaim:
             claimName: redis-pv-claim
