tyfocg/deployment/stg/tomcat-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-tomcat
  namespace: tyfocg-stg
  labels:
    app: app-tomcat
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app-tomcat
        tier: tomcat
    spec:
      containers:
      - image: pupudaye/tomcat:8.0.47
        command: ["sh","/opt/install/apache-tomcat-8.0.47/conf/run.sh"]
        name: tomcat
        ports:
        - containerPort: 8080
          name: tomcat
        volumeMounts:
          - name: tomcat-config-persistent-storage
            mountPath: /opt/install/apache-tomcat-8.0.47/conf
          - name: tomcat-www-persistent-storage
            mountPath: /opt/install/apache-tomcat-8.0.47/webapps
          - name: localtime-config-volume
            mountPath: /etc/localtime
      volumes:
        - name: tomcat-config-persistent-storage
          persistentVolumeClaim:
             claimName: tomcat-config-pv-claim
        - name: tomcat-www-persistent-storage
          persistentVolumeClaim:
             claimName: tomcat-www-pv-claim
        - name: localtime-config-volume
          hostPath:
             path: /etc/localtime
